--- a/stock-service/package.json
+++ b/stock-service/package.json
@@ -60,15 +60,21 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "coverageReporters": ["text", "html"],
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "src/**/*.{js,jsx,tsx,ts}",
+      "!**/node_modules/**",
+      "!src/**/*.type.ts",
+      "!src/**/*.interface.ts",
+      "!src/**/*.enum.ts",
+      "!src/**/*.module.ts",
+      "!src/*.ts"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "coverage",
     "testEnvironment": "node"
   }
 }
