--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,3 +42,19 @@ services:
     ports:
       - 3040:3040
       - 9251:9251
+
+  mongo:
+    image: mongo:4.4
+    container_name: stock-mongo
+    networks:
+      stock_network:
+    environment:
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+      - MONGO_INITDB_ROOT_USERNAME=stock
+      - MONGO_INITDB_ROOT_PASSWORD=stockpass
+    volumes:
+      - ./.data/dbdata:/data/db
+    ports:
+      - '27018:27017'
+    restart: unless-stopped
