test: implement auth integration

--- a/api-service/package.json
+++ b/api-service/package.json
@@ -72,7 +72,7 @@
       "json",
       "ts"
     ],
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".*\\.(spec|test)\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
