feat: implement send email when recover password

--- a/api-service/.env.example
+++ b/api-service/.env.example
@@ -1,6 +1,17 @@
-DB_CONNECTION=mongodb
+PORT=3040
+
 DB_HOST=mongo
 DB_PORT=27017
 DB_NAME=stock
 DB_USERNAME=stock
 DB_PASSWORD=stockpass
+
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_SECURE=false
+MAIL_USER=
+MAIL_PASS=
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=stockpass
